parser.output
Grammar

    0 $accept: start $end

    1 start: program

    2 program: statement_list
    3        | TOKEN_LINEBREAK statement_list

    4 block: TOKEN_COLON TOKEN_INDENT statement_list TOKEN_DEDENT

    5 statement_list: statement
    6               | statement_list TOKEN_LINEBREAK statement
    7               | statement_list TOKEN_LINEBREAK

    8 statement: stmt_if
    9          | stmt_for
   10          | stmt_while
   11          | declaration
   12          | assignment
   13          | definition
   14          | TOKEN_RETURN expression
   15          | TOKEN_BREAK
   16          | TOKEN_RETURN
   17          | expression

   18 stmt_if: TOKEN_IF expression block
   19        | TOKEN_IF expression block TOKEN_ELSE block

   20 stmt_for: TOKEN_FOR TOKEN_IDENTIFIER TOKEN_IN expression block

   21 stmt_while: TOKEN_WHILE expression block

   22 declaration: TOKEN_IDENTIFIER TOKEN_COLON TOKEN_TYPE TOKEN_ASSIGN expression
   23            | TOKEN_IDENTIFIER TOKEN_COLON TOKEN_TYPE

   24 assignment: TOKEN_IDENTIFIER TOKEN_ASSIGN expression

   25 definition: TOKEN_FUNC_DEF TOKEN_IDENTIFIER TOKEN_LPAREN parameters TOKEN_RPAREN block
   26           | TOKEN_FUNC_DEF TOKEN_IDENTIFIER TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_ARROW TOKEN_TYPE block

   27 parameters: parameters TOKEN_COMMA parameter
   28           | parameter
   29           | ε

   30 parameter: TOKEN_IDENTIFIER TOKEN_COLON TOKEN_TYPE
   31          | TOKEN_IDENTIFIER

   32 arguments: arguments TOKEN_COMMA expression
   33          | expression

   34 function_call: TOKEN_IDENTIFIER TOKEN_LPAREN arguments TOKEN_RPAREN

   35 expression: TOKEN_LPAREN expression TOKEN_RPAREN
   36           | expression TOKEN_COMPARE expression
   37           | expression TOKEN_DIFFERENT expression
   38           | expression TOKEN_LESS expression
   39           | expression TOKEN_LESS_EQUAL expression
   40           | expression TOKEN_GREATER expression
   41           | expression TOKEN_GREATER_EQUAL expression
   42           | expression TOKEN_AND expression
   43           | expression TOKEN_OR expression
   44           | expression TOKEN_PLUS expression
   45           | expression TOKEN_MINUS expression
   46           | expression TOKEN_MULTIPLY expression
   47           | expression TOKEN_DIVIDE expression
   48           | TOKEN_NOT expression
   49           | TOKEN_MINUS expression
   50           | function_call
   51           | term

   52 term: TOKEN_NUMBER
   53     | TOKEN_STRING
   54     | TOKEN_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_STRING <str> (258) 53
    TOKEN_NOT (259) 48
    TOKEN_AND (260) 42
    TOKEN_OR (261) 43
    TOKEN_BREAK (262) 15
    TOKEN_IN (263) 20
    TOKEN_ASSIGN (264) 22 24
    TOKEN_IDENTIFIER <str> (265) 20 22 23 24 25 26 30 31 34 54
    TOKEN_LPAREN (266) 25 26 34 35
    TOKEN_RPAREN (267) 25 26 34 35
    TOKEN_ARROW (268) 26
    TOKEN_COMPARE (269) 36
    TOKEN_DIFFERENT (270) 37
    TOKEN_IF (271) 18 19
    TOKEN_ELSE (272) 19
    TOKEN_FOR (273) 20
    TOKEN_WHILE (274) 21
    TOKEN_FUNC_DEF (275) 25 26
    TOKEN_RETURN (276) 14 16
    TOKEN_GREATER (277) 40
    TOKEN_LESS (278) 38
    TOKEN_LESS_EQUAL (279) 39
    TOKEN_GREATER_EQUAL (280) 41
    TOKEN_COMMA (281) 27 32
    TOKEN_LINEBREAK (282) 3 6 7
    TOKEN_PLUS (283) 44
    TOKEN_MINUS (284) 45 49
    TOKEN_MULTIPLY (285) 46
    TOKEN_INDENT (286) 4
    TOKEN_DEDENT (287) 4
    TOKEN_DIVIDE (288) 47
    TOKEN_NUMBER <str> (289) 52
    TOKEN_COLON (290) 4 22 23 30
    TOKEN_TYPE <str> (291) 22 23 26 30
    LOWER_THAN_ELSE (292)
    UMINUS (293)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    start (40)
        on left: 1
        on right: 0
    program <astNode> (41)
        on left: 2 3
        on right: 1
    block <astNode> (42)
        on left: 4
        on right: 18 19 20 21 25 26
    statement_list <astNode> (43)
        on left: 5 6 7
        on right: 2 3 4 6 7
    statement <astNode> (44)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 5 6
    stmt_if <astNode> (45)
        on left: 18 19
        on right: 8
    stmt_for <astNode> (46)
        on left: 20
        on right: 9
    stmt_while <astNode> (47)
        on left: 21
        on right: 10
    declaration <astNode> (48)
        on left: 22 23
        on right: 11
    assignment <astNode> (49)
        on left: 24
        on right: 12
    definition <astNode> (50)
        on left: 25 26
        on right: 13
    parameters <astNode> (51)
        on left: 27 28 29
        on right: 25 26 27
    parameter <astNode> (52)
        on left: 30 31
        on right: 27 28
    arguments <astNode> (53)
        on left: 32 33
        on right: 32 34
    function_call <astNode> (54)
        on left: 34
        on right: 50
    expression <astNode> (55)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 14 17 18 19 20 21 22 24 32 33 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    term <astNode> (56)
        on left: 52 53 54
        on right: 51


State 0

    0 $accept: • start $end

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_BREAK       shift, and go to state 3
    TOKEN_IDENTIFIER  shift, and go to state 4
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_IF          shift, and go to state 6
    TOKEN_FOR         shift, and go to state 7
    TOKEN_WHILE       shift, and go to state 8
    TOKEN_FUNC_DEF    shift, and go to state 9
    TOKEN_RETURN      shift, and go to state 10
    TOKEN_LINEBREAK   shift, and go to state 11
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    start           go to state 14
    program         go to state 15
    statement_list  go to state 16
    statement       go to state 17
    stmt_if         go to state 18
    stmt_for        go to state 19
    stmt_while      go to state 20
    declaration     go to state 21
    assignment      go to state 22
    definition      go to state 23
    function_call   go to state 24
    expression      go to state 25
    term            go to state 26


State 1

   53 term: TOKEN_STRING •

    $default  reduce using rule 53 (term)


State 2

   48 expression: TOKEN_NOT • expression

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    function_call  go to state 24
    expression     go to state 28
    term           go to state 26


State 3

   15 statement: TOKEN_BREAK •

    $default  reduce using rule 15 (statement)


State 4

   22 declaration: TOKEN_IDENTIFIER • TOKEN_COLON TOKEN_TYPE TOKEN_ASSIGN expression
   23            | TOKEN_IDENTIFIER • TOKEN_COLON TOKEN_TYPE
   24 assignment: TOKEN_IDENTIFIER • TOKEN_ASSIGN expression
   34 function_call: TOKEN_IDENTIFIER • TOKEN_LPAREN arguments TOKEN_RPAREN
   54 term: TOKEN_IDENTIFIER •

    TOKEN_ASSIGN  shift, and go to state 29
    TOKEN_LPAREN  shift, and go to state 30
    TOKEN_COLON   shift, and go to state 31

    $default  reduce using rule 54 (term)


State 5

   35 expression: TOKEN_LPAREN • expression TOKEN_RPAREN

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    function_call  go to state 24
    expression     go to state 32
    term           go to state 26


State 6

   18 stmt_if: TOKEN_IF • expression block
   19        | TOKEN_IF • expression block TOKEN_ELSE block

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    function_call  go to state 24
    expression     go to state 33
    term           go to state 26


State 7

   20 stmt_for: TOKEN_FOR • TOKEN_IDENTIFIER TOKEN_IN expression block

    TOKEN_IDENTIFIER  shift, and go to state 34


State 8

   21 stmt_while: TOKEN_WHILE • expression block

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    function_call  go to state 24
    expression     go to state 35
    term           go to state 26


State 9

   25 definition: TOKEN_FUNC_DEF • TOKEN_IDENTIFIER TOKEN_LPAREN parameters TOKEN_RPAREN block
   26           | TOKEN_FUNC_DEF • TOKEN_IDENTIFIER TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_ARROW TOKEN_TYPE block

    TOKEN_IDENTIFIER  shift, and go to state 36


State 10

   14 statement: TOKEN_RETURN • expression
   16          | TOKEN_RETURN •

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    $default  reduce using rule 16 (statement)

    function_call  go to state 24
    expression     go to state 37
    term           go to state 26


State 11

    3 program: TOKEN_LINEBREAK • statement_list

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_BREAK       shift, and go to state 3
    TOKEN_IDENTIFIER  shift, and go to state 4
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_IF          shift, and go to state 6
    TOKEN_FOR         shift, and go to state 7
    TOKEN_WHILE       shift, and go to state 8
    TOKEN_FUNC_DEF    shift, and go to state 9
    TOKEN_RETURN      shift, and go to state 10
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    statement_list  go to state 38
    statement       go to state 17
    stmt_if         go to state 18
    stmt_for        go to state 19
    stmt_while      go to state 20
    declaration     go to state 21
    assignment      go to state 22
    definition      go to state 23
    function_call   go to state 24
    expression      go to state 25
    term            go to state 26


State 12

   49 expression: TOKEN_MINUS • expression

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    function_call  go to state 24
    expression     go to state 39
    term           go to state 26


State 13

   52 term: TOKEN_NUMBER •

    $default  reduce using rule 52 (term)


State 14

    0 $accept: start • $end

    $end  shift, and go to state 40


State 15

    1 start: program •

    $default  reduce using rule 1 (start)


State 16

    2 program: statement_list •
    6 statement_list: statement_list • TOKEN_LINEBREAK statement
    7               | statement_list • TOKEN_LINEBREAK

    TOKEN_LINEBREAK  shift, and go to state 41

    $default  reduce using rule 2 (program)


State 17

    5 statement_list: statement •

    $default  reduce using rule 5 (statement_list)


State 18

    8 statement: stmt_if •

    $default  reduce using rule 8 (statement)


State 19

    9 statement: stmt_for •

    $default  reduce using rule 9 (statement)


State 20

   10 statement: stmt_while •

    $default  reduce using rule 10 (statement)


State 21

   11 statement: declaration •

    $default  reduce using rule 11 (statement)


State 22

   12 statement: assignment •

    $default  reduce using rule 12 (statement)


State 23

   13 statement: definition •

    $default  reduce using rule 13 (statement)


State 24

   50 expression: function_call •

    $default  reduce using rule 50 (expression)


State 25

   17 statement: expression •
   36 expression: expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression

    TOKEN_AND            shift, and go to state 42
    TOKEN_OR             shift, and go to state 43
    TOKEN_COMPARE        shift, and go to state 44
    TOKEN_DIFFERENT      shift, and go to state 45
    TOKEN_GREATER        shift, and go to state 46
    TOKEN_LESS           shift, and go to state 47
    TOKEN_LESS_EQUAL     shift, and go to state 48
    TOKEN_GREATER_EQUAL  shift, and go to state 49
    TOKEN_PLUS           shift, and go to state 50
    TOKEN_MINUS          shift, and go to state 51
    TOKEN_MULTIPLY       shift, and go to state 52
    TOKEN_DIVIDE         shift, and go to state 53

    $default  reduce using rule 17 (statement)


State 26

   51 expression: term •

    $default  reduce using rule 51 (expression)


State 27

   34 function_call: TOKEN_IDENTIFIER • TOKEN_LPAREN arguments TOKEN_RPAREN
   54 term: TOKEN_IDENTIFIER •

    TOKEN_LPAREN  shift, and go to state 30

    $default  reduce using rule 54 (term)


State 28

   36 expression: expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression
   48           | TOKEN_NOT expression •

    TOKEN_COMPARE        shift, and go to state 44
    TOKEN_DIFFERENT      shift, and go to state 45
    TOKEN_GREATER        shift, and go to state 46
    TOKEN_LESS           shift, and go to state 47
    TOKEN_LESS_EQUAL     shift, and go to state 48
    TOKEN_GREATER_EQUAL  shift, and go to state 49
    TOKEN_PLUS           shift, and go to state 50
    TOKEN_MINUS          shift, and go to state 51
    TOKEN_MULTIPLY       shift, and go to state 52
    TOKEN_DIVIDE         shift, and go to state 53

    $default  reduce using rule 48 (expression)


State 29

   24 assignment: TOKEN_IDENTIFIER TOKEN_ASSIGN • expression

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    function_call  go to state 24
    expression     go to state 54
    term           go to state 26


State 30

   34 function_call: TOKEN_IDENTIFIER TOKEN_LPAREN • arguments TOKEN_RPAREN

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    arguments      go to state 55
    function_call  go to state 24
    expression     go to state 56
    term           go to state 26


State 31

   22 declaration: TOKEN_IDENTIFIER TOKEN_COLON • TOKEN_TYPE TOKEN_ASSIGN expression
   23            | TOKEN_IDENTIFIER TOKEN_COLON • TOKEN_TYPE

    TOKEN_TYPE  shift, and go to state 57


State 32

   35 expression: TOKEN_LPAREN expression • TOKEN_RPAREN
   36           | expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression

    TOKEN_AND            shift, and go to state 42
    TOKEN_OR             shift, and go to state 43
    TOKEN_RPAREN         shift, and go to state 58
    TOKEN_COMPARE        shift, and go to state 44
    TOKEN_DIFFERENT      shift, and go to state 45
    TOKEN_GREATER        shift, and go to state 46
    TOKEN_LESS           shift, and go to state 47
    TOKEN_LESS_EQUAL     shift, and go to state 48
    TOKEN_GREATER_EQUAL  shift, and go to state 49
    TOKEN_PLUS           shift, and go to state 50
    TOKEN_MINUS          shift, and go to state 51
    TOKEN_MULTIPLY       shift, and go to state 52
    TOKEN_DIVIDE         shift, and go to state 53


State 33

   18 stmt_if: TOKEN_IF expression • block
   19        | TOKEN_IF expression • block TOKEN_ELSE block
   36 expression: expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression

    TOKEN_AND            shift, and go to state 42
    TOKEN_OR             shift, and go to state 43
    TOKEN_COMPARE        shift, and go to state 44
    TOKEN_DIFFERENT      shift, and go to state 45
    TOKEN_GREATER        shift, and go to state 46
    TOKEN_LESS           shift, and go to state 47
    TOKEN_LESS_EQUAL     shift, and go to state 48
    TOKEN_GREATER_EQUAL  shift, and go to state 49
    TOKEN_PLUS           shift, and go to state 50
    TOKEN_MINUS          shift, and go to state 51
    TOKEN_MULTIPLY       shift, and go to state 52
    TOKEN_DIVIDE         shift, and go to state 53
    TOKEN_COLON          shift, and go to state 59

    block  go to state 60


State 34

   20 stmt_for: TOKEN_FOR TOKEN_IDENTIFIER • TOKEN_IN expression block

    TOKEN_IN  shift, and go to state 61


State 35

   21 stmt_while: TOKEN_WHILE expression • block
   36 expression: expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression

    TOKEN_AND            shift, and go to state 42
    TOKEN_OR             shift, and go to state 43
    TOKEN_COMPARE        shift, and go to state 44
    TOKEN_DIFFERENT      shift, and go to state 45
    TOKEN_GREATER        shift, and go to state 46
    TOKEN_LESS           shift, and go to state 47
    TOKEN_LESS_EQUAL     shift, and go to state 48
    TOKEN_GREATER_EQUAL  shift, and go to state 49
    TOKEN_PLUS           shift, and go to state 50
    TOKEN_MINUS          shift, and go to state 51
    TOKEN_MULTIPLY       shift, and go to state 52
    TOKEN_DIVIDE         shift, and go to state 53
    TOKEN_COLON          shift, and go to state 59

    block  go to state 62


State 36

   25 definition: TOKEN_FUNC_DEF TOKEN_IDENTIFIER • TOKEN_LPAREN parameters TOKEN_RPAREN block
   26           | TOKEN_FUNC_DEF TOKEN_IDENTIFIER • TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_ARROW TOKEN_TYPE block

    TOKEN_LPAREN  shift, and go to state 63


State 37

   14 statement: TOKEN_RETURN expression •
   36 expression: expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression

    TOKEN_AND            shift, and go to state 42
    TOKEN_OR             shift, and go to state 43
    TOKEN_COMPARE        shift, and go to state 44
    TOKEN_DIFFERENT      shift, and go to state 45
    TOKEN_GREATER        shift, and go to state 46
    TOKEN_LESS           shift, and go to state 47
    TOKEN_LESS_EQUAL     shift, and go to state 48
    TOKEN_GREATER_EQUAL  shift, and go to state 49
    TOKEN_PLUS           shift, and go to state 50
    TOKEN_MINUS          shift, and go to state 51
    TOKEN_MULTIPLY       shift, and go to state 52
    TOKEN_DIVIDE         shift, and go to state 53

    $default  reduce using rule 14 (statement)


State 38

    3 program: TOKEN_LINEBREAK statement_list •
    6 statement_list: statement_list • TOKEN_LINEBREAK statement
    7               | statement_list • TOKEN_LINEBREAK

    TOKEN_LINEBREAK  shift, and go to state 41

    $default  reduce using rule 3 (program)


State 39

   36 expression: expression • TOKEN_COMPARE expression
   37           | expression • TOKEN_DIFFERENT expression
   38           | expression • TOKEN_LESS expression
   39           | expression • TOKEN_LESS_EQUAL expression
   40           | expression • TOKEN_GREATER expression
   41           | expression • TOKEN_GREATER_EQUAL expression
   42           | expression • TOKEN_AND expression
   43           | expression • TOKEN_OR expression
   44           | expression • TOKEN_PLUS expression
   45           | expression • TOKEN_MINUS expression
   46           | expression • TOKEN_MULTIPLY expression
   47           | expression • TOKEN_DIVIDE expression
   49           | TOKEN_MINUS expression •

    $default  reduce using rule 49 (expression)


State 40

    0 $accept: start $end •

    $default  accept


State 41

    6 statement_list: statement_list TOKEN_LINEBREAK • statement
    7               | statement_list TOKEN_LINEBREAK •

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_BREAK       shift, and go to state 3
    TOKEN_IDENTIFIER  shift, and go to state 4
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_IF          shift, and go to state 6
    TOKEN_FOR         shift, and go to state 7
    TOKEN_WHILE       shift, and go to state 8
    TOKEN_FUNC_DEF    shift, and go to state 9
    TOKEN_RETURN      shift, and go to state 10
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13

    $default  reduce using rule 7 (statement_list)

    statement      go to state 64
    stmt_if        go to state 18
    stmt_for       go to state 19
    stmt_while     go to state 20
    declaration    go to state 21
    assignment     go to state 22
    definition     go to state 23
    function_call  go to state 24
    expression     go to state 25
    term           go to state 26


State 42

   42 expression: expression TOKEN_AND • expression

    TOKEN_STRING      shift, and go to state 1
    TOKEN_NOT         shift, and go to state 2
    TOKEN_IDENTIFIER  shift, and go to state 27
    TOKEN_LPAREN      shift, and go to state 5
    TOKEN_MINUS       shift, and go to state 12
    TOKEN_NUMBER      shift, and go to state 13
